# dbmigrate

./: .envrc  .gitignore  .travis-sqlcipher-cargo-run-status.bash  .travis-trusty-sqlcipher-helper.bash  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
dbmigrate/: Cargo.toml  Makefile
dbmigrate-lib/: Cargo.toml
dbmigrate-lib/src/: errors.rs  files.rs  lib.rs
dbmigrate-lib/src/drivers/: mod.rs  mysql.rs  postgres.rs  sqlcipher.rs  sqlite.rs  surreal.rs
dbmigrate/examples/migrations/sql/: 0002.add_companies_table.up.sql
dbmigrate/examples/migrations/surreal/: 0001.initial_commit.down.sql  0001.initial_commit.up.sql  0002.add_companies_table.down.sql  0002.add_companies_table.up.sql
dbmigrate/src/: cmd.rs  errors.rs  main.rs  print.rs
examples/migrations/: 0001.initial_commit.up.sql  0002.add_companies_table.down.sql  0002.add_companies_table.up.sql
src/: cmd.rs  errors.rs  files.rs  format.rs  lib.rs  main.rs  print.rs
src/cmd/: cli.rs  mod.rs
src/drivers/: mod.rs  mysql.rs  pg.rs  postgres.rs  sqlite.rs
