[package]
name = "dbmigrate"
version = "0.2.2"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "CLI tool to create and run SQL migrations. Postgres and MySQL supported."
homepage = "https://github.com/Keats/dbmigrate"
repository = "https://github.com/Keats/dbmigrate"
keywords = ["database", "postgres", "migration", "sql", "mysql"]

[dependencies]
regex = "0.1"
url = "0.5"
postgres = { version = "0.11.3", features = ["openssl"] }
mysql = "1.2"
clippy = {version = "~0.0.48", optional = true}
time = "0.1"
term = "0.2"
openssl = "0.7.6"
openssl-sys = "0.7.6"

[dependencies.clap]
version = "2"
default-features = false
features = [ "suggestions", "color" , "unstable"]

[dev-dependencies]
tempdir = "0.3.4"

[features]
default = []
dev = ["clippy"]
