[package]
name = "dbmigrate"
version = "0.2.7"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "CLI tool to create and run SQL migrations. Postgres, MySQL and Sqlite supported."
homepage = "https://github.com/Keats/dbmigrate"
repository = "https://github.com/Keats/dbmigrate"
keywords = ["database", "postgres", "migration", "sql", "mysql"]

[dependencies]
regex = "0.2"
url = "1"
postgres = { version = "0.13", features = ["with-native-tls"] }
mysql = "8.0"
rusqlite = "0.8"
term = "0.4"
dotenv = "0.8"
error-chain = "0.7"

[dependencies.clap]
version = "2"
default-features = false
features = [ "suggestions", "color" , "unstable"]

[dev-dependencies]
tempdir = "0.3.4"
