[package]
name = "dbmigrate-lib"
version = "0.1.1"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Library to run database migrations. Postgres, MySQL, Sqlite supported."
homepage = "https://github.com/Keats/dbmigrate"
repository = "https://github.com/Keats/dbmigrate"
keywords = ["database", "postgres", "migration", "sql", "mysql"]

[dependencies]
regex = "0.2"
url = "1"
postgres = { version = "0.14", features = ["with-native-tls"], optional=true }
mysql = { version="10", optional=true}
rusqlite = { version="0.10", optional=true}
error-chain = "0.10"

[dev-dependencies]
tempdir = "0.3.4"

[features]
default = ["postgres_support", "sqlite_support", "mysql_support"]
postgres_support = ["postgres"]
sqlite_support = ["rusqlite"]
mysql_support = ["mysql"]
