[package]
name = "dbmigrate-lib"
version = "0.2.0"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Library to run database migrations. Postgres, MySQL, Sqlite supported."
homepage = "https://github.com/Keats/dbmigrate"
repository = "https://github.com/Keats/dbmigrate"
keywords = ["database", "postgres", "migration", "sql", "mysql"]

[dependencies]
regex = "1"
url = "2"
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.3.0", optional = true }
postgres = { version = "0.17.0", optional = true }
mysql = { version="12", optional = true}
rusqlite = { version = "0.14.0", optional = true }
error-chain = "0.11"

[dev-dependencies]
tempdir = "0.3.4"

[features]
default = ["postgres_support", "sqlite_support", "mysql_support"]
postgres_support = ["postgres", "postgres-native-tls", "native-tls"]
sqlite_support = ["rusqlite"]
mysql_support = ["mysql"]
