[package]
name = "dbmigrate"
version = "0.3.0"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "CLI tool to create and run database migrations. Postgres, MySQL supported."
homepage = "https://github.com/Keats/dbmigrate"
repository = "https://github.com/Keats/dbmigrate"
keywords = ["database", "postgres", "migration", "sql", "mysql"]

[dependencies]
term = "0.4"
dotenv = "0.8"
error-chain = "0.10"

[dependencies.clap]
version = "2"
default-features = false
features = [ "suggestions", "color" , "unstable"]

[dependencies.dbmigrate-lib]
path = "../dbmigrate-lib"
# version = "0.1.0"
