[package]
name = "dbmigrate"
version = "0.3.5"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "CLI tool to create and run database migrations. Postgres, MySQL supported."
homepage = "https://github.com/Keats/dbmigrate"
repository = "https://github.com/Keats/dbmigrate"
keywords = ["database", "postgres", "migration", "sql", "mysql"]

[dependencies]
term = "0.4"
dotenv = "0.10"
error-chain = "0.11"

[dependencies.clap]
version = "2"
default-features = false
features = [ "suggestions", "color" , "unstable"]

[dependencies.dbmigrate-lib]
version = "0.1"
# path = "../dbmigrate-lib"
default-features = false

[features]
default = ["postgres_support", "sqlite_support", "mysql_support"]
postgres_support = ["dbmigrate-lib/postgres_support"]
sqlite_support = ["dbmigrate-lib/sqlite_support"]
mysql_support = ["dbmigrate-lib/mysql_support"]
